# deslopify

./: Cargo.toml  README.md
.beads/: metadata.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/analysis/: complexity.rs  dead_code.rs  duplication.rs  imports.rs  layers.rs  mod.rs  naming.rs  patterns.rs  runtime.rs  searchability.rs  tree_sitter_util.rs
src/output/: json.rs  llm.rs  mod.rs  terminal.rs
src/recommendations/: engine.rs  mod.rs  templates.rs
src/scanner/: config.rs  git.rs  language.rs  mod.rs  quality.rs  stats.rs  walker.rs
src/scoring/: context_budget.rs  dimensions.rs  mod.rs  model.rs
tests/: integration_test.rs
tests/fixtures/clean_project/: README.md  pyproject.toml
tests/fixtures/clean_project/src/: main.py  utils.py
tests/fixtures/clean_project/tests/: test_utils.py
tests/fixtures/sloppy_project/src/: engine.py  helpers.py
