[package]
name = "deslopify"
version = "0.1.0"
edition = "2021"
description = "Codebase LLM-Friction Analyzer — measure how hard it is for an LLM agent to work on your codebase"
license = "MIT"
repository = "https://github.com/yevheniihuselietov/deslopify"
keywords = ["llm", "ai", "code-quality", "static-analysis", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
regex = "1"
toml = "0.8"
